Fix testimonial images distortion with object-fit: cover

--- a/style.css
+++ b/style.css
@@ -1096,7 +1096,8 @@
         left: 9px;
         width: 136px;
         height: 157px;
-        aspect-ratio: 0.87;
+        object-fit: cover;
+        object-position: top center;
     }
 
     .jampa-mobile .frame-7 {
@@ -1130,7 +1131,8 @@
         width: 148px;
         height: 171px;
         position: absolute;
-        aspect-ratio: 0.87;
+        object-fit: cover;
+        object-position: top center;
     }
 
     .jampa-mobile .frame-8 {
@@ -1163,7 +1165,8 @@
         width: 154px;
         height: 177px;
         position: absolute;
-        aspect-ratio: 0.87;
+        object-fit: cover;
+        object-position: top center;
     }
 
     .jampa-mobile .frame-9 {
@@ -4371,7 +4374,8 @@
         top: 1px;
         left: 0;
         height: 323px;
-        aspect-ratio: 0.87;
+        object-fit: cover;
+        object-position: top center;
     }
 
     .jampa-web .title-wrapper {
@@ -4426,7 +4430,8 @@
         left: 0;
         width: 282px;
         height: 325px;
-        aspect-ratio: 0.87;
+        object-fit: cover;
+        object-position: top center;
     }
 
     .jampa-web .frame-11 {
